5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1635_2446.log
== TEST (2019-04-08 15:45:14) 
-- CODE:
codigo = int(input("senha: "))

u = codigo % (10 ** 1)
g = codigo % (10 ** 2)
i = codigo % (10 ** 3)
d = codigo % (10 ** 4)
o = codigo % (10 ** 5)
c = codigo % (10 ** 6)

s = c + d + g
ss = o + i + u
r = ss % s

if r == 0:
	print("acesso liberado")
else:
	print("acesso negado")
-- OUTPUT:
acesso negado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:45:32) 
-- CODE:
codigo = int(input("senha: "))

u = codigo % (10 ** 1)
g = codigo % (10 ** 2)
i = codigo % (10 ** 3)
d = codigo % (10 ** 4)
o = codigo % (10 ** 5)
c = codigo % (10 ** 6)

s = c + d + g
ss = o + i + u
r = ss % s

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:45:45) 
-- CODE:
codigo = int(input("senha: "))

u = codigo % (10 ** 1)
g = codigo % (10 ** 2)
i = codigo % (10 ** 3)
d = codigo % (10 ** 4)
o = codigo % (10 ** 5)
c = codigo % (10 ** 6)

s = c + d + g
ss = o + i + u
r = ss % s

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:45:56) 
-- CODE:
codigo = int(input("senha: "))

u = codigo % (10 ** 1)
g = codigo % (10 ** 2)
i = codigo % (10 ** 3)
d = codigo % (10 ** 4)
o = codigo % (10 ** 5)
c = codigo % (10 ** 6)

s = c + d + g
ss = o + i + u
r = ss % s

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.193965
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:46:52) 
-- CODE:
codigo = int(input("senha: "))

u = codigo % (10 ** 1)
g = codigo % (10 ** 2)
i = codigo % (10 ** 3)
d = codigo % (10 ** 4)
o = codigo % (10 ** 5)
c = codigo % (10 ** 6)

s = c + d + g
ss = o + i + u
r = ss % s

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:47:04) 
-- CODE:
codigo = int(input("senha: "))

u = codigo % (10 ** 1)
g = codigo % (10 ** 2)
i = codigo % (10 ** 3)
d = codigo % (10 ** 4)
o = codigo % (10 ** 5)
c = codigo % (10 ** 6)

s = c + d + g
ss = o + i + u
r = ss % s

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:47:15) 
-- CODE:
codigo = int(input("senha: "))

u = codigo % (10 ** 1)
g = codigo % (10 ** 2)
i = codigo % (10 ** 3)
d = codigo % (10 ** 4)
o = codigo % (10 ** 5)
c = codigo % (10 ** 6)

s = c + d + g
ss = o + i + u
r = ss % s

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:33:05) 
-- CODE:
codigo = int(input("senha: "))

u = codigo % (10 ** 1)
g = codigo % (10 ** 2)
i = codigo % (10 ** 3)
d = codigo % (10 ** 4)
o = codigo % (10 ** 5)
c = codigo % (10 ** 6)

s = c + d + g
ss = o + i + u
r = ss % s

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:36:11) 
-- CODE:
codigo = int(input("senha:{1,6} "))

u = codigo % (10 ** 1)
g = codigo % (10 ** 2)
i = codigo % (10 ** 3)
d = codigo % (10 ** 4)
o = codigo % (10 ** 5)
c = codigo % (10 ** 6)

s = c + d + g
ss = o + i + u
r = ss % s

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:38:18) 
-- CODE:
codigo = int(input("senha:{1,6} "))

u = codigo % (10 ** 1)
g = codigo % (10 ** 2)
i = codigo % (10 ** 3)
d = codigo % (10 ** 4)
o = codigo % (10 ** 5)
c = codigo % (10 ** 6)

s = c + d + g
ss = o + i + u
r = ss % s

if r == "0":
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:44:17) 
-- CODE:
codigu = int(input("senha:{1,6} "))

u = (codigo % 10)
g = (codigo // 10) % 10
i = (codigo // (10 ** 2)) % 10
d = (codigo // (10 ** 3)) % 10
o = (codigo // (10 ** 4)) % 10
c = (codigo // (10 ** 5)) % 10

cdg = c + d + g
oiu = o + i + u
r = oiu % cdg

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    u = (codigo % 10)
NameError: name 'codigo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:44:44) 
-- CODE:
codigu = int(input("senha:{1,6} "))

u = (codigu % 10)
g = (codigu // 10) % 10
i = (codigu // (10 ** 2)) % 10
d = (codigu // (10 ** 3)) % 10
o = (codigu // (10 ** 4)) % 10
c = (codigu // (10 ** 5)) % 10

cdg = c + d + g
oiu = o + i + u
r = oiu % cdg

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:44:51) 
-- CODE:
codigu = int(input("senha:{1,6} "))

u = (codigu % 10)
g = (codigu // 10) % 10
i = (codigu // (10 ** 2)) % 10
d = (codigu // (10 ** 3)) % 10
o = (codigu // (10 ** 4)) % 10
c = (codigu // (10 ** 5)) % 10

cdg = c + d + g
oiu = o + i + u
r = oiu % cdg

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:45:03) 
-- CODE:
codigu = int(input("senha:{1,6} "))

u = (codigu % 10)
g = (codigu // 10) % 10
i = (codigu // (10 ** 2)) % 10
d = (codigu // (10 ** 3)) % 10
o = (codigu // (10 ** 4)) % 10
c = (codigu // (10 ** 5)) % 10

cdg = c + d + g
oiu = o + i + u
r = oiu % cdg

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:45:11) 
-- CODE:
codigu = int(input("senha:{1,6} "))

u = (codigu % 10)
g = (codigu // 10) % 10
i = (codigu // (10 ** 2)) % 10
d = (codigu // (10 ** 3)) % 10
o = (codigu // (10 ** 4)) % 10
c = (codigu // (10 ** 5)) % 10

cdg = c + d + g
oiu = o + i + u
r = oiu % cdg

if r == 0:
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.168068
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
